Enable running sample plugin tests with security
Signed-off-by: Craig Perkins <cwperx@amazon.com>